# note_pade_tuned

./: CHANGELOG.md  index.html  package-lock.json  package.json  readme.md  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: EditorOverlays.tsx  MenuControls.tsx  TopRibbon.tsx
src/hooks/: useCanvasInteractions.ts  useReminders.ts  useSelectionNotes.ts  useWorkspace.ts
src/lib/: documentFormat.ts  editorDom.ts  quickSearch.ts  workspace.ts
src/types/: editor.ts
